--- a/Informe Demográfico del Régimen/Informe-Contexto-Demográfico-del-Régimen.Rmd
+++ b/Informe Demográfico del Régimen/Informe-Contexto-Demográfico-del-Régimen.Rmd
@@ -207,7 +207,7 @@ Graf1 <- rbind(
   ) +
   labs(
     title =
-      "Gráfico 1: Pirámide Poblacional del Regimen",
+      "Gráfico 1: Pirámide Poblacional del Régimen",
     subtitle =
       "por Edad según el Género",
     y =
@@ -297,7 +297,7 @@ Graf2 <- ggplot(piramide2, aes(x = Edad_intervalo, y = ifelse(Sexo == "M", -Coun
   coord_flip()+
   scale_fill_manual(values = c( "cadetblue3","#2F4F4F"),
                     labels = c( "Mujeres","Hombres"))+
-  labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos \n del Fondo C."))
+  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
 ```
 
 Al 31 de diciembre de 2023 hay un total de 3.758 de cotizantes activos del fondo de pensiones, cuya distribución por sexo es la siguiente: 1.907 mujeres (50,75%) y 1.851 hombres (49,25%). 
@@ -352,7 +352,7 @@ Graf3 <- ggplot(datos_long, aes(x = Antiguedad_Interva, y = Cantidad, fill = Sex
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
         legend.title = element_blank())+
-  labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos \n del Fondo C."))
+  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
 ```
 
 
@@ -416,7 +416,7 @@ Graf4 <- ggplot(piramide, aes(x = Edad_intervalo, y = ifelse(SEXO == "M", -Count
   coord_flip()+
   scale_fill_manual(values = c( "cadetblue3","#2F4F4F"),
                     labels = c( "Mujeres","Hombres"))+
-  labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos del fondo de pensiones."))
+  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
 ```
 
 \begin{wrapfigure}[9]{r}{0.5\textwidth}
@@ -440,7 +440,7 @@ datos_long2 <- tidyr::pivot_longer(pensionados_por_tipo, cols = c(F, M), names_t
 
 Graf5 <- ggplot(datos_long2, aes(x = COD_TIPO_PENSION, y = Cantidad, fill = Sexo)) +
   geom_bar(stat = "identity", position = "dodge") +
-  labs(title = "Gráfico 5: Distribución de los \n Tipos de Pension",
+  labs(title = "Gráfico 5: Distribución de los \n Tipos de Pensión",
        subtitle = "2023",
        x = "Tipos de Pensión",
        y = "Cantidad",
@@ -452,7 +452,7 @@ Graf5 <- ggplot(datos_long2, aes(x = COD_TIPO_PENSION, y = Cantidad, fill = Sexo
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
         legend.title = element_blank())+
-  labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos \n del Fondo C."))
+  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
 ```
 
 En cuanto al tipo de pensión, se observa que los pensionados por vejez son 236 (57.42%), seguidos por los de sucesión con 110 (26.76%) y, finalmente, los de invalidez con 65 (15.82%). Además, tanto en hombres como en mujeres, se mantiene esta distribución según lo refleja el gráfico 5. En la población masculina, destacan los pensionados por vejez, con 123 casos, lo que representa el 58.12% de los pensionados por vejez, así como los de sucesión, con 59 casos, lo que equivale al 54.64% de los pensionados por sucesión. La situación es diferente en el caso de las mujeres, donde destacan los pensionados por invalidez, con 34 casos, que constituyen el 52.30% de los pensionados por invalidez.
@@ -552,7 +552,7 @@ Graf6 <- ggplot(datos_long, aes(x = Antiguedad_intervalo, y = Cantidad, fill = S
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
         legend.title = element_blank())+
-  labs(caption = expression(bold("Fuente: ") * "Elaboración propia a partir de datos del \n fondo de pensiones."))
+  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
 ```
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE,fig.width=6, fig.height=4}
@@ -664,7 +664,7 @@ Graf8 <-  ggplot(conteo, aes(x = as.numeric(año), y = cantidad_personas, color 
         plot.subtitle = element_text(hjust = 0.5),
         plot.caption = element_text(hjust = 0, color = "black", size = 8),
         legend.title = element_blank()) +
-  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C"))
+  labs(caption = expression(bold("Fuente: ") * "Elaborado a partir de datos del Fondo C."))
 
 ```
 
